--- a/configs-and-secrets/nginx/default.conf
+++ b/configs-and-secrets/nginx/default.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name  _;
-    ssl_certificate /etc/nginx/Certificate.crt;
-    ssl_certificate_key /etc/nginx/private.key;
+    ssl_certificate /etc/nginx/<Certificate.crt>;
+    ssl_certificate_key /etc/nginx/<private.key>;
     ssl_protocols		TLSv1.2 TLSv1.3;
     ssl_ciphers			EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:EECDH+aRSA+SHA384:EECDH+aRSA+SHA256:!aNULL:!eNULL:!LOW:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS;
     ssl_prefer_server_ciphers   on;
@@ -14,7 +14,7 @@ server {
 
 
     location /midpoint {
-        proxy_pass http://IdM-Framework:8080;
+        proxy_pass http://idm-framework-server:8080;
         }
 
     # redirect server error pages to the static page /50x.html
